Fix: last new layout on mobile

--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ h2 {
     #buscador form {
         width: 100%;
     }
+    
 }
 
 
@@ -334,6 +335,18 @@ h2 {
 @media only screen and (max-width: 768px) {
     .minimal-table tbody tr td:nth-child(even) {
         display: none !important;
+    }
+
+    .card.horizontal{
+        display: block !important;
+    }
+
+    .card.horizontal .card-image {
+        max-width: 100%;
+    }
+
+    .card.horizontal .card-image img {
+        width: 100% !important;
     }
 }
 
